--- a/index.html
+++ b/index.html
@@ -200,7 +200,12 @@
         <div class="slider">
             <div class="slide">
                 <div class="testimonial">
-                    <h5 class="testimonial__header">Web Research Profile Management</h5>
+                    <h5 class="testimonial__header">
+                        <a class="project_header_link"
+                            href="https://github.com/ParisSakkoulas/Web-Research-Profile-Management">Web Research
+                            Profile Management</a>
+                    </h5>
+
                     <blockquote class="testimonial__text">
                         I developed an online web application to help researchers and academic staff organize and
                         showcase their work. The platform
@@ -220,7 +225,10 @@
             <div class="slide">
                 <div class="testimonial">
                     <h5 class="testimonial__header">
-                        Movies Shopping Card Back End
+                        <a class="project_header_link"
+                            href="https://github.com/ParisSakkoulas/RestFull-API-CRUD-DVDs-example">Movies Shopping
+                            Card Back End</a>
+
                     </h5>
                     <blockquote class="testimonial__text">
                         Built a RESTful API that enables for
@@ -237,7 +245,9 @@
             <div class="slide">
                 <div class="testimonial">
                     <h5 class="testimonial__header">
-                        Students Information Web App
+
+                        <a class="project_header_link" href="https://github.com/ParisSakkoulas/Icarus-Project">Students
+                            Information Web App</a>
                     </h5>
                     <blockquote class="testimonial__text">
                         Developed a web application designed for managing courses and grades, catering to both
